# old-svn

./: README.md  lirc-090-ubuntu.patch
Documents/: 1-wire-command-set.doc  1w-test1-orgparams.logicdata  20130926_RM_pre.fzz  Blitz_Luftdruck_V10.brd  Blitz_Luftdruck_V10.sch  Untitled Sketch.fzz
Documents/1-Wire/: Intro to 1-Wire.doc
XX-INTERNAL/TUL/: Descriptors.c  main.hex  makefile
XX-INTERNAL/multiknxd/: .anjuta_sym_db.db  README
XX-INTERNAL/multiknxd/.anjuta/: default.profile
XX-INTERNAL/multiknxd/src/: Makefile.am  daemon.c  knxhandler.h  owhandler.c  owhandler.h
XX-INTERNAL/russknxd/: README  main.c
XX-INTERNAL/testing/elab17-src/: xpllib-dev_1.31a-1_i386.deb  xpllib_1.31a-1.dsc
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/: ChangeLog  Makefile  configure  configure.in  libtool
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/debian/: README  changelog  control  cron.d.ex  emacsen-install.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  manpage.sgml.ex  postinst.ex  postrm.ex  preinst.ex  xpleibd.postinst.debhelper  xpleibd.substvars
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/debian/xpleibd/DEBIAN/: control  postrm
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/debian/xpleibd/etc/default/: xpleibd
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/debian/xpleibd/etc/init.d/: xpleibd
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/debian/xpleibd/usr/share/doc/xpleibd/: README
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/debug/: Makefile  libtool
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/debug/src/: Makefile
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/debug/src/.deps/: xpl-eibd.Po
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/src/: Makefile  xpleibd.c
XX-INTERNAL/testing/elab17-src/xpleibd-0.1/src/.deps/: common.Po
XX-INTERNAL/testing/xpl_eibd/: AUTHORS  Doxyfile  Makefile  config.h  config.status  configure  xpl_eibd.kdevses
XX-INTERNAL/testing/xpltools/: common.h  xpl-eibd.cpp
XX-INTERNAL/wiregated2/: Makefile.am  configure.ac
XX-INTERNAL/wiregated2/src/: Makefile.am  main.cc
avr/: datacrc.pl  datacrc10.pl  datacrc7.pl  datacrc9.pl  slavecrc.php  slavecrc.pl
avr/AtmelStudio_old/: OwSlave_v1.1.c  owslave_DS2423.atsln  owslave_DS2423.atsuo  owslave_toby_mit_eeprom.c
avr/AtmelStudio_old/ds18b20/: ow_slave_DS18B20.c  ow_slave_DS18B20_tiny25.hex
avr/AtmelStudio_old/ds2423_attiny2313a/: Makefile  ow_slave_DS2423.c  ow_slave_DS2423_tiny2313.hex  ow_slave_DS2423_tiny25.hex
avr/AtmelStudio_old/owslave_DS2423/: owslave_DS2423.c  owslave_DS2423.cproj
avr/Fritzing/Ohne_Fill/: Pixelcontroller2-PCB.fzz  Pixelcontroller3-PCB.fzz
avr/Fritzing/Production_ready/: Pixelcontroller3-PCB.fzz
avr/Fritzing/Testing/: DaliShield.fzz  GiraRM.fzz  ICL 7667(1).fzpz  ICL 7667.fzpz  Pixelcontroller1-PCB.fzz  Pixelcontroller1-PCB2.fzz  Pixelcontroller1-alles.fzz  Pixelcontroller1.fzz  TestMega.fzz
avr/owslave/: Makefile  README  README.power.ods  common.h  debug.h  main.c  main.c.ds2423_ds1820_EEEF_v1.2a.bak  main.c.ds2423_v1.2.bak  main.elf  main.hex  main.lss  main.lst  main.map  main.sym  uart.lst
avr/owslave/.dep/: main.o.d  uart.o.d
avr/owslave/owfs-tmp/: E1.3  diff.txt  ow_e1.c  ow_e1.h
avr/owslave/owslave_E1_4count/: 02_attiny84-base-counter.fzz  README_2013-12  attiny84_wassercounter1.5_.eep  attiny84_wassercounter1.5_fuses_etc  common.h  main.c  main.c.2dot4mA_idle  main.c.CURRENT_DEVEL_2013-06-06_saved_2013-11-09  main.c.NOSLEEP_CNT-works-onPORTA  main.c.SLEEP_WORKING  main.c.TRASH_CNT-ok-OWSLEEP-not  main.c.TRASH_PORTA-cnt_PWRDOWN  main.c_BOTH_WORKING_BUT_some255  main.c_BOTH_WORKING_BUT_some255-PAGESIZE9  main.elf  main.hex  main.lss  main.lst  main.map  main.sym  uart.c
avr/owslave/owslave_E1_BMP/: .~lock.NMEA.ods#  Makefile  NMEA.ods  Pflichtenheft.txt  common.h  debug.h  main.c  main.elf  main.hex  main.lss  main.lst  main.map  main.sym
avr/owslave/owslave_E1_RM/: Makefile  common.h  main.c  main.elf  main.full20130524  main.lst  main.map  main.min20130524  (+1 more)
avr/sketchbook/: Unbenanntes Dokument 1
wiregate-INTERNAL/: README
wiregate-INTERNAL/TUL/: Descriptors.lst  TUL.serial  flashcmds  main.elf  main.lss  main.lst  main.map  main.sym
wiregate-INTERNAL/multiknxd/: AUTHORS  Makefile.am  configure.ac
wiregate-INTERNAL/multiknxd/src/: daemon.h  globals.h  knxhandler.c  main.c  utils.c  utils.h
wiregate-INTERNAL/russknxd/: Makefile.am  configure.ac
(+1156 files in other folders)
