dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(russknxd, 0.1)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_PROG_CC


AC_PROG_CPP
AC_PROG_CXX



AM_PROG_LIBTOOL




PKG_CHECK_MODULES(pth, zlib)
AC_OUTPUT([
Makefile
])
