AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(xpleibd, 0.1)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL
AC_CHECK_HEADERS([eibclient.h xPL.h])

dnl Checks for libraries
dnl eibclient is needed 
AC_CHECK_LIB(eibclient, EIBOpen_GroupSocket, [LIBEIBCLIENT=-leibclient],
		      [AC_MSG_ERROR(not found)])
AC_SUBST(LIBEIBCLIENT)
dnl libxPL is needed 
AC_CHECK_LIB(xPL, xPL_initialize, [LIBXPL=-lxPL],
		      [AC_MSG_ERROR(not found)])
AC_SUBST(LIBXPL)

AC_OUTPUT(Makefile src/Makefile)
